# kaggle-titanic

./: .gitignore  .kaggle-competition  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-experiment.yml  02-bug.yml  03-improvement.yml
.github/workflows/: ci.yml
notebooks/: notebook.ipynb
outputs/submissions/: log.md  submission_001_rf_baseline.csv
src/: features.py  utils.py
tests/: test_features.py
